[gd_scene load_steps=16 format=2]

[ext_resource path="res://Cat_Sprite_Sheet.png" type="Texture" id=2]
[ext_resource path="res://StateMachine.gd" type="Script" id=3]
[ext_resource path="res://In_Air.gd" type="Script" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://idle.gd" type="Script" id=6]
[ext_resource path="res://Moving.gd" type="Script" id=7]
[ext_resource path="res://Hiding.gd" type="Script" id=9]
[ext_resource path="res://World.gd" type="Script" id=10]
[ext_resource path="res://Rooms/room1.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 3.5, 3.5 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 6, 4 )

[sub_resource type="Animation" id=53]
resource_name = "Hiding (copy)"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=59]
resource_name = "Idle"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=54]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=57]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[node name="World" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 10 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 96, 160 )
script = ExtResource( 5 )

[node name="Collider 2" type="CollisionShape2D" parent="Player"]
position = Vector2( -2.5, -0.5 )
shape = SubResource( 50 )
one_way_collision_margin = 128.0

[node name="Collider" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 5 )
shape = SubResource( 49 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 4
vframes = 2

[node name="AnimPlayer" type="AnimationPlayer" parent="Player"]
"anims/Hiding (copy)" = SubResource( 53 )
anims/Idle = SubResource( 59 )
anims/RESET = SubResource( 54 )
anims/Walk = SubResource( 57 )

[node name="StateMachine" type="Node2D" parent="Player"]
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 6 )

[node name="Moving" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 7 )

[node name="In_Air" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 4 )

[node name="Hiding" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true

[node name="Rooms" type="Node2D" parent="."]

[node name="Room" parent="Rooms" instance=ExtResource( 12 )]
